# osdu-spi-stack-ghcr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  smoke.yml  sweeper.yml  validate.yml
docs/: CI_SETUP.md  ai-skills.md  architecture.md  branch-protection.json  msft-tenant-deploy-lane-changes.md
docs/decisions/: 001-azure-paas-for-data.md  002-aks-automatic.md  003-in-cluster-middleware-scope.md  004-local-helm-chart-safeguards.md  005-workload-identity.md  006-three-namespace-model.md  007-layered-kustomization-ordering.md  008-bicep-for-azure-provisioning.md  009-flux-cd-for-gitops.md  010-keyvault-secret-management.md  011-trust-manager-ca-distribution.md  012-ingress-profiles.md  013-schema-load-flux-job.md  014-suspend-gitops-after-deploy.md  015-partition-entitlements-bootstrap.md  016-istio-jwt-projection.md  017-osdu-image-lock.md  018-karpenter-nodepool-authoring.md  019-adme-aligned-integration-tests.md  019-aks-base-node-autoprovisioning.md  020-deploy-lane-invariants.md  020-disable-local-auth-data-services.md  021-aks-base-node-autoprovisioning.md  021-application-insights-telemetry.md  022-disable-local-auth-data-services.md  022-record-ingestion-data-plane.md  023-application-insights-telemetry.md  024-record-ingestion-data-plane.md  025-spi-ghcr-service-images.md  README.md  adr-short-template.md  adr-template.md
docs/design/: README.md  bicep-architecture.md  (+6 more)
infra/: aks.bicep  flux.bicep  main.bicep
scripts/: capture_diagnostics.sh  resolve-image-tags.py  sweep_orphan_rgs.sh  validate_manifests.sh  wait_for_flux_ready.sh
tests/: test_application_insights.py  test_azure_infra.py  test_bicep_compile.py  test_config_validation.py  test_creator_identity.py  test_gateway_ownership.py  test_images.py  test_onboard.py  test_reconcile.py  test_update.py
(+120 files in other folders)
